fix: repair ci.yml yaml syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Verify Week 12 deliverables exist
+        shell: bash
         run: |
           test -f "规则/Engineering_Guidelines.md"
           test -f "规则/Q2_Implementation_Plan.md"
 
-        - name: Frozen rules conformance gate
+      - name: Frozen rules conformance gate
         shell: bash
         run: |
           bash tooling/scripts/conformance.sh
-
