--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,22 @@ jobs:
       - name: Verify Week 12 deliverables exist
         shell: bash
         run: |
-          test -f "规则/Engineering_Guidelines.md"
-          test -f "规则/Q2_Implementation_Plan.md"
+          set -euo pipefail
+          echo "Listing top-level directories:"
+          ls -la
+
+          echo "Finding Week 12 deliverables..."
+          EG=$(find . -maxdepth 4 -type f -name "Engineering_Guidelines.md" | head -n 1)
+          Q2=$(find . -maxdepth 4 -type f -name "Q2_Implementation_Plan.md" | head -n 1)
+
+          test -n "$EG"
+          test -n "$Q2"
+
+          echo "Found:"
+          echo "$EG"
+          echo "$Q2"
 
       - name: Frozen rules conformance gate
         shell: bash
         run: |
-          bash "tooling/scripts/conformance.sh"
+          bash tooling/scripts/conformance.sh
