--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,8 @@ jobs:
           restore-keys: |
             nyx-${{ runner.os }}-
 
-      # Placeholder: replace with real build commands once build tooling is defined.
-      - name: Build placeholder
+      # Minimal build: syntax compile for L0 identity until build tooling lands.
+      - name: Build L0 identity (syntax)
         shell: bash
         run: |
           set -euo pipefail
@@ -65,7 +65,7 @@ jobs:
             echo "forced build failure"
             exit 1
           fi
-          echo "build placeholder"
+          python -m compileall packages/l0-identity/src
 
   test:
     name: Test
@@ -75,8 +75,8 @@ jobs:
     steps:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
-      # Placeholder: replace with real test commands once test tooling is defined.
-      - name: Test placeholder
+      # Minimal test: run the L0 identity unittest suite.
+      - name: Test L0 identity
         shell: bash
         run: |
           set -euo pipefail
@@ -84,7 +84,7 @@ jobs:
             echo "forced test failure"
             exit 1
           fi
-          echo "test placeholder"
+          python -m unittest discover -s packages/l0-identity/test -p "*_test.py"
 
   lint:
     name: Lint
@@ -94,8 +94,8 @@ jobs:
     steps:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
-      # Placeholder: replace with real lint commands once lint tooling is defined.
-      - name: Lint placeholder
+      # Minimal lint: syntax compile for L0 identity tests until a linter is selected.
+      - name: Lint L0 identity
         shell: bash
         run: |
           set -euo pipefail
@@ -103,19 +103,19 @@ jobs:
             echo "forced lint failure"
             exit 1
           fi
-          echo "lint placeholder"
+          python -m compileall packages/l0-identity/test
 
   sast:
     name: SAST
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      actions: read
       security-events: write
     steps:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
-      # Placeholder: replace with real SAST scanner before any implementation code lands.
-      - name: Generate placeholder SARIF
+      - name: SAST force-fail gate
         shell: bash
         run: |
           set -euo pipefail
@@ -123,30 +123,16 @@ jobs:
             echo "forced sast failure"
             exit 1
           fi
-          mkdir -p .artifacts
-          cat > .artifacts/sast.sarif <<'SARIF'
-          {
-            "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
-            "version": "2.1.0",
-            "runs": [
-              {
-                "tool": {
-                  "driver": {
-                    "name": "NYX Placeholder SAST",
-                    "informationUri": "https://github.com/JiahaoAlbus/nyx",
-                    "rules": []
-                  }
-                },
-                "results": []
-              }
-            ]
-          }
-          SARIF
 
-      - name: Upload SARIF (SAST)
-        uses: github/codeql-action/upload-sarif@45c373516f557556c15d420e3f5e0aa3d64366bc # v3.31.9
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@45c373516f557556c15d420e3f5e0aa3d64366bc # v3.31.9
         with:
-          sarif_file: .artifacts/sast.sarif
+          languages: python
+
+      - name: Analyze CodeQL
+        uses: github/codeql-action/analyze@45c373516f557556c15d420e3f5e0aa3d64366bc # v3.31.9
+        with:
+          category: "/language:python"
 
   dependency-scan:
     name: Dependency Scan
